2/6 计时器更新，增加了js代码和图片以达成更好的样式

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -131,7 +131,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mano" ></div>
+<div class="checkbox-container" id="mano" >
+
+<img src="sign/Mano_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Mano.png" alt="" class="iphoto">
 
 </div>
 
@@ -141,7 +147,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="jiaozi" ></div>
+<div class="checkbox-container" id="jiaozi" >
+
+<img src="sign/Hiori_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Hiori.png" alt="" class="iphoto">
 
 </div>
 
@@ -151,7 +163,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mgr" ></div>
+<div class="checkbox-container" id="mgr" >
+
+<img src="sign/Meguru_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Meguru.png" alt="" class="iphoto">
 
 </div>
 
@@ -159,7 +177,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kgn" ></div>
+<div class="checkbox-container" id="kgn" >
+
+<img src="sign/Kogane_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Kogane.png" alt="" class="iphoto">
 
 </div>
 
@@ -167,7 +191,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mmm" ></div>
+<div class="checkbox-container" id="mmm" >
+
+<img src="sign/Mamimi_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Mamimi.png" alt="" class="iphoto">
 
 </div>
 
@@ -175,7 +205,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="sky" ></div>
+<div class="checkbox-container" id="sky" >
+
+<img src="sign/Sakuya_Sign.png" alt="" class="sign" style="width: 60px;">
+
+</div>
+
+<img src="ip1/Sakuya.png" alt="" class="iphoto">
 
 </div>
 
@@ -183,7 +219,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fff" ></div>
+<div class="checkbox-container" id="fff" >
+
+<img src="sign/Yuika_Sign.png" alt="" class="sign" style="width: 80px;">
+
+</div>
+
+<img src="ip1/Yuika.png" alt="" class="iphoto">
 
 </div>
 
@@ -191,7 +233,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="krk" ></div>
+<div class="checkbox-container" id="krk" >
+
+<img src="sign/Kiriko_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Kiriko.png" alt="" class="iphoto">
 
 </div>
 
@@ -213,7 +261,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="kaho" ></div>
+<div class="checkbox-container" id="kaho" >
+
+<img src="sign/Kaho_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Kaho.png" alt="" class="iphoto">
 
 </div>
 
@@ -223,7 +277,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="cyk" ></div>
+<div class="checkbox-container" id="cyk" >
+
+<img src="sign/Chiyoko_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Chiyoko.png" alt="" class="iphoto">
 
 </div>
 
@@ -233,7 +293,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="juri" ></div>
+<div class="checkbox-container" id="juri" >
+
+<img src="sign/Juri_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Juri.png" alt="" class="iphoto">
 
 </div>
 
@@ -243,7 +309,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="rinze" ></div>
+<div class="checkbox-container" id="rinze" >
+
+<img src="sign/Rinze_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Rinze.png" alt="" class="iphoto">
 
 </div>
 
@@ -253,7 +325,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nth" ></div>
+<div class="checkbox-container" id="nth" >
+
+<img src="sign/Natsuha_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Natsuha.png" alt="" class="iphoto">
 
 </div>
 
@@ -263,7 +341,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="amn" ></div>
+<div class="checkbox-container" id="amn" >
+
+<img src="sign/Amana_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Amana.png" alt="" class="iphoto">
 
 </div>
 
@@ -273,7 +357,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="tenka" ></div>
+<div class="checkbox-container" id="tenka" >
+
+<img src="sign/Tenka_Sign.png" alt="" class="sign" style="width: 80px;">
+
+</div>
+
+<img src="ip1/Tenka.png" alt="" class="iphoto">
 
 </div>
 
@@ -283,7 +373,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="chyk" ></div>
+<div class="checkbox-container" id="chyk" >
+
+<img src="sign/Chiyuki_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Chiyuki.png" alt="" class="iphoto">
 
 </div>
 
@@ -309,7 +405,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="ash" ></div>
+<div class="checkbox-container" id="ash" >
+
+<img src="sign/Asahi_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Asahi.png" alt="" class="iphoto">
 
 </div>
 
@@ -319,7 +421,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="fyk" ></div>
+<div class="checkbox-container" id="fyk" >
+
+<img src="sign/Fuyuko_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Fuyuko.png" alt="" class="iphoto">
 
 </div>
 
@@ -329,7 +437,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mei" ></div>
+<div class="checkbox-container" id="mei" >
+
+<img src="sign/Mei_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Mei.png" alt="" class="iphoto">
 
 </div>
 
@@ -339,7 +453,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="toru" ></div>
+<div class="checkbox-container" id="toru" >
+
+<img src="sign/Toru_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Toru.png" alt="" class="iphoto">
 
 </div>
 
@@ -349,7 +469,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mdk" ></div>
+<div class="checkbox-container" id="mdk" >
+
+<img src="sign/Madoka_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Madoka.png" alt="" class="iphoto">
 
 </div>
 
@@ -359,7 +485,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="koito" ></div>
+<div class="checkbox-container" id="koito" >
+
+<img src="sign/Koito_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Koito.png" alt="" class="iphoto">
 
 </div>
 
@@ -369,7 +501,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hnn" ></div>
+<div class="checkbox-container" id="hnn" >
+
+<img src="sign/Hinana_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Hinana.png" alt="" class="iphoto">
 
 </div>
 
@@ -397,7 +535,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="nck" ></div>
+<div class="checkbox-container" id="nck" >
+
+<img src="sign/Nichika_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Nck.png" alt="" class="iphoto">
 
 </div>
 
@@ -407,7 +551,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="mkd" ></div>
+<div class="checkbox-container" id="mkd" >
+
+<img src="sign/Mikoto_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Mkt.png" alt="" class="iphoto">
 
 </div>
 
@@ -417,7 +567,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="luka" ></div>
+<div class="checkbox-container" id="luka" >
+
+<img src="sign/Luca_Sign.png" alt="" class="sign" style="margin-bottom: 20px;">
+
+</div>
+
+<img src="ip1/Luca.png" alt="" class="iphoto">
 
 </div>
 
@@ -427,7 +583,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hana" ></div>
+<div class="checkbox-container" id="hana" >
+
+<img src="sign/Hana_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Hana.png" alt="" class="iphoto">
 
 </div>
 
@@ -437,7 +599,13 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkboxs">
 
-<div class="checkbox-container" id="hrk" ></div>
+<div class="checkbox-container" id="hrk" >
+
+<img src="sign/haruki_Sign.png" alt="" class="sign" >
+
+</div>
+
+<img src="ip1/Hrk.png" alt="" class="iphoto">
 
 </div>
 
@@ -838,8 +1006,6 @@ position: absolute;
 
 .checkboxs {
 
-display: inline;
-
 flex-wrap: wrap;
 
 align-items: center;
@@ -847,6 +1013,12 @@ align-items: center;
 justify-content: flex-start;
 
 flex: 1 1 auto;
+
+position: relative;
+
+height: 100px;
+
+width: 116px;
 
 }
 
@@ -864,8 +1036,6 @@ min-width: 40px;
 
 padding: 0 8px;
 
-display: inline-flex;
-
 flex: 0 0 auto;
 
 align-items: center;
@@ -881,6 +1051,14 @@ letter-spacing: .08em;
 text-indent: .08em;
 
 cursor: pointer;
+
+opacity: 1;
+
+position: absolute;
+
+z-index: 1;
+
+display: flex;
 
 }
 
@@ -986,6 +1164,8 @@ th{
 
 height: 100px;
 
+padding: 0.5px;
+
 }
 
 .foot{
@@ -999,6 +1179,32 @@ align-items: center;
 justify-content: center;
 
 margin-top: 100px;
+
+}
+
+.iphoto{
+
+height: 100px;
+
+left: 8%;
+
+z-index: -1;
+
+position: absolute;
+
+display: block;
+
+}
+
+.sign{
+
+width: 100px;
+
+opacity: 0;
+
+user-select: none;
+
+pointer-events: none;
 
 }
 ```
@@ -1200,7 +1406,6 @@ alert("晚上要不要去看星星呢~");
 }else{alert("这么晚了还不睡觉，Mr.作息失调");}
 
   
-  
 
 var bg = document.querySelector('.biaoge')
 
@@ -1208,11 +1413,41 @@ bg.addEventListener("mouseover",function(event){
 
 if(event.target.className ==="checkbox-container"){
 
+var mb=event.target
+
+var sn=mb.querySelector('.sign')
+
 document.querySelectorAll('.xz').forEach(function(a){a.classList.remove('xz');})
 
-event.target.classList.add('xz');
+document.querySelectorAll('.sign').forEach(function(a){a.style.opacity=0;})
 
-}else{document.querySelectorAll('.xz').forEach(function(a){a.classList.remove('xz');})}
+mb.classList.add('xz');
+
+var sign=0
+
+console.log(mb)
+
+var qm=setInterval(function(){
+
+if(sign<1.05&&mb.className==='checkbox-container xz'){
+
+sn.style.opacity=sign
+
+sign+=0.05;
+
+}else{
+
+clearInterval(qm);
+
+}},40)
+
+}else{
+
+document.querySelectorAll('.xz').forEach(function(a){a.classList.remove('xz');})
+
+document.querySelectorAll('.sign').forEach(function(a){a.style.opacity=0;})
+
+}
 
 })
 
@@ -1222,9 +1457,39 @@ bg.addEventListener("click",function(event){
 
 if(event.target.className ==="checkbox-container xz"){
 
-document.querySelectorAll('.xz1').forEach(function(a){a.classList.remove('xz1');});
+var mb=event.target
 
-event.target.classList.add('xz1');
+document.querySelectorAll('.xz1').forEach(function(a){
+
+a.style.zIndex=1;
+
+a.style.opacity=1;
+
+a.classList.remove('xz1')
+
+})
+
+mb.classList.add('xz1');
+
+var tmd=1
+
+var touming=setInterval(function(){
+
+if(tmd>=0.2&&mb.classList.contains('xz1')){
+
+mb.style.opacity=tmd
+
+tmd-=0.05;
+
+}else if(tmd<=0.3&&event.target.classList.contains('xz1')){
+
+event.target.style.zIndex=-2;
+
+}
+
+else{clearInterval(touming)
+
+}},50);
 
 }
 
@@ -1240,11 +1505,11 @@ document.querySelector('.qk').style.color="black";
 
 document.querySelectorAll('.xz1').forEach(function(selectedBox) {
 
+selectedBox.style.zIndex=1
+
+selectedBox.style.opacity=1
+
 selectedBox.classList.remove('xz1');})
-
-document.querySelectorAll('.xz').forEach(function(selectedBox) {
-
-selectedBox.classList.remove('xz');})
 
 })
 
@@ -1293,3 +1558,35 @@ ss.png
 <br>
 co.png
 ![输入图片说明](https://www.project-imas.wiki/images/6/6e/CoMETIK_Unit_logo.png)
+* **
+* ## ip1文件夹
+![Mano.png ](https://www.project-imas.wiki/images/1/1d/SCMano.png)
+![Hiori.png ](https://www.project-imas.wiki/images/1/19/SCHiori.png)
+![Meguru.png ](https://www.project-imas.wiki/images/0/0d/SCMeguru.png)
+![Kogane.png ](https://www.project-imas.wiki/images/b/bc/SCKogane.png)
+![Mamimi.png](https://www.project-imas.wiki/images/2/20/SCMamimi.png)
+![Sakuya.png](https://www.project-imas.wiki/images/8/81/SCSakuya.png)
+![Yuika.png](https://www.project-imas.wiki/images/4/46/SCYuika.png)
+![Kiriko.png](https://www.project-imas.wiki/images/a/ae/SCKiriko.png)
+![Kaho.png](https://www.project-imas.wiki/images/6/6c/Kaho_Shiny_Colors.png)
+![Chiyoko.png](https://www.project-imas.wiki/images/d/d7/Chiyoko_Shiny_Colors.png)
+![Juri.png](https://www.project-imas.wiki/images/a/ae/SCJuri.png)
+![Rinze.png](https://www.project-imas.wiki/images/d/d0/Rinze_Shiny_Colors.png)
+![Natsuha.png](https://www.project-imas.wiki/images/b/b2/Natsuha_Shiny_Colors.png)
+![Amana.png](https://www.project-imas.wiki/images/0/04/SCAmana.png)
+![Tenka.png](https://www.project-imas.wiki/images/2/28/SCTenka.png)
+![Chiyuki.png](https://www.project-imas.wiki/images/8/83/SCChiyuki.png)
+![Asahi.png](https://www.project-imas.wiki/images/7/72/SCAsahi.png)
+![Fuyuko.png](https://www.project-imas.wiki/images/2/2f/SCFuyuko.png)
+![Mei.png](https://www.project-imas.wiki/images/d/d9/SCMei.png)
+![Toru.png](https://www.project-imas.wiki/images/8/86/SCToruIcon.png)
+![Madoka.png](https://www.project-imas.wiki/images/8/81/SCMadokaIcon.png)
+![Koito.png](https://www.project-imas.wiki/images/b/bb/SCKoitoIcon.png)
+![Hinana.png](https://www.project-imas.wiki/images/3/3f/SCHinanaIcon.png)
+![Nichika.png](https://www.project-imas.wiki/images/8/89/SCNichika.png)
+![Mikoto.png](https://www.project-imas.wiki/images/0/03/SCMikoto.png)
+![Luca.png](https://www.project-imas.wiki/images/8/8d/SC_Luca_Profile.png)
+![Hana.png](https://www.project-imas.wiki/images/7/7e/SCHana.png)
+![Haruki.png](https://www.project-imas.wiki/images/c/c0/SCHaruki.png)
+* **
+* ## sign文件夹
