--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1262,5 +1262,17 @@ Event对象方法：**Event.preventDefault()**、**Event.stopPropagation()**
 
 **事件代理：** 由于事件会在冒泡阶段向上传播到父节点，因此可以把子节点的监听函数定义在父节点上，由父节点的监听函数统一处理多个子元素的事件，这种方法就叫做事件代理
 
+* **
+* ## 定时器
+JS提供定时执行代码的功能，叫做定时器（timer），主要由```setTimeout()```和```setlnterval```两个函数来完成
 
+```setTimeout```函数用来指定某个函数或者某段代码，在多少毫秒之后执行，它返回一个整数表示定时器的编号，以后可以用来取消这个定时器
+
+它接受两个参数，第一个参数是将要推迟执行的函数名或一段代码，第二个参数是推迟执行的毫秒数
+```var tm=setTimeout(func|code,delay);```
+如果回调函数是对象的方法，那么```setTimeout```使方法内部的this关键字指向全局环境而不是定义时所在的那个对象
+
+可以通过```clearTimeout(定时器名字)```来取消定时器
+
+```setlnterval```和```setTimeout```用法完全一致，去别仅仅在于它指定某个任务每隔一段时间就执行一次，也就是无限次的定时执行
 * **
