2/7 把昨天的sign文件夹补上了

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -569,7 +569,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkbox-container" id="luka" >
 
-<img src="sign/Luca_Sign.png" alt="" class="sign" style="margin-bottom: 20px;">
+<img src="sign/Luca_Sign.png" alt="" class="sign">
 
 </div>
 
@@ -1590,3 +1590,31 @@ co.png
 ![Haruki.png](https://www.project-imas.wiki/images/c/c0/SCHaruki.png)
 * **
 * ## sign文件夹
+![Mano_Sign.png ](https://www.project-imas.wiki/images/9/98/ManoSakuragiSign.png)
+![Hiori_Sign.png ](https://www.project-imas.wiki/images/6/61/HioriKazanoSign.png)
+![Meguru_Sign.png ](https://www.project-imas.wiki/images/6/69/MeguruHachimiyaSign.png)
+![Kogane_Sign.png ](https://www.project-imas.wiki/images/9/9d/KoganeSign.png)
+![Mamimi_Sign.png](https://www.project-imas.wiki/images/9/97/MamimiTanakaSign.png)
+![Sakuya_Sign.png](https://www.project-imas.wiki/images/a/af/SakuyaShiraseSign.png)
+![Yuika_Sign.png](https://www.project-imas.wiki/images/5/57/YuikaMitsumineSign.png)
+![Kiriko_Sign.png](https://www.project-imas.wiki/images/2/24/KirikoYukokuSign.png)
+![Kaho_Sign.png](https://www.project-imas.wiki/images/5/50/KahoKomiyaSign.png)
+![Chiyoko_Sign.png](https://www.project-imas.wiki/images/0/06/ChiyokoSonodaSign.png)
+![Juri_Sign.png](https://www.project-imas.wiki/images/a/ad/JuriSaijoSign.png)
+![Rinze_Sign.png](https://www.project-imas.wiki/images/3/35/RinzeMorinoSign.png)
+![Natsuha_Sign.png](https://www.project-imas.wiki/images/8/83/NatsuhaArisugawaSign.png)
+![Amana_Sign.png](https://www.project-imas.wiki/images/1/11/AmanaOsakiSign.png)
+![Tenka_Sign.png](https://www.project-imas.wiki/images/e/ea/TenkaOsakiSign.png)
+![Chiyuki_Sign.png](https://www.project-imas.wiki/images/a/ae/ChiyukiKuwayamaSign.png)
+![Asahi_Sign.png](https://www.project-imas.wiki/images/a/a6/AsahiSerizawaSign.png)
+![Fuyuko_Sign.png](https://www.project-imas.wiki/images/c/c2/FuyukoMayuzumiSign.png)
+![Mei_Sign.png](https://www.project-imas.wiki/images/0/03/MeiIzumiSign.png)
+![Toru_Sign.png](https://www.project-imas.wiki/images/9/9b/ToruAsakuraSign.png)
+![Madoka_Sign.png](https://www.project-imas.wiki/images/5/55/MadokaHiguchiSign.png)
+![Koito_Sign.png](https://www.project-imas.wiki/images/b/b5/KoitoFukumaruSign.png)
+![Hinana_Sign.png](https://www.project-imas.wiki/images/e/ee/HinanaIchikawaSign.png)
+![Nichika_Sign.png](https://www.project-imas.wiki/images/d/dd/NichikaNanakusaSign.png)
+![Mikoto_Sign.png](https://www.project-imas.wiki/images/0/0e/MikotoAketaSign.png)
+![Luca_Sign.png](https://www.project-imas.wiki/images/8/83/LucaIkarugaSign.png)
+![Hana_Sign.png](https://www.project-imas.wiki/images/1/19/HanaSuzukiSign.png)
+![Haruki_Sign.png](https://www.project-imas.wiki/images/b/bb/HarukiIkutaSign.png)
