2/7 JS笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1276,3 +1276,107 @@ JS提供定时执行代码的功能，叫做定时器（timer），主要由```s
 
 ```setlnterval```和```setTimeout```用法完全一致，去别仅仅在于它指定某个任务每隔一段时间就执行一次，也就是无限次的定时执行
 * **
+* ## 防抖与节流
+防抖和节流应该是性能优化的知识，但是遇到的频率很高，处理不当会导致浏览器卡死
+```
+function showTop(){
+    var scrollTop=document.documentElement.scrollTop;
+    console.log('滚动条位置：'+scrollTop);
+} 
+window.onscroll=showTop
+```
+上面这段代码在执行的时候会发现一个问题，就是默认的执行频率太高了，实际上并不需要如此高频率的反馈，因为浏览器的性能是有限的
+
+一种思路是在第一次触发事件时不立刻执行函数，而是给出一个期限值，如果在期限值内没有再次触发事件那么就执行函数，反之重新进行计时
+
+防抖就是对于短时间内连续出发时间，让其在某个时间期限内事件处理函数只执行一次
+
+节流就是每间隔一定时间触发一次事件处理函数
+* **
+* ## 命令行工具
+常用的命令行工具有两种：**CMD**和**PowerShall**
+
+CMD命令行：
+
+1. 打开命令行窗口 
+ ```win```+```r```快速打开命令行窗口
+ 2. 选择盘符：盘符名加冒号，大小写无所谓
+ 3. 查看盘符及目录文件下的文件和文件夹:```dir```
+ 4. 清空命令行信息```cls```
+ 5. 进入文件夹或目录```cd 文件夹名称```
+ 6. 返回上一级目录```cd ../```
+ 7. 快速补全目录或文件夹名称```tab```
+ 8. 创建文件夹```mkdir 文件夹名称```
+ 9. 查看历史输入过的命令：上下按键
+<br>
+
+PowerShall命令行：
+
+1. 打开方式
+在开始位置搜索```PowerShall```打开或者在对应目录```shift```+右键打开
+2. 其他和上面一样
+* **
+* ## ECMAScript简介
+ECMAScript和JS的关系是：前者是后者的规格，后者是前者的一种实现
+
+ECMAScript（ES6）是JS语言的标准，它是为了使JS可以用来编写复杂的大型应用程序，成为企业级开发语言
+* **
+* ## var和let还有const
+ES6新增了```let```命令用来声明变量，用法类似与```var``` ，但所声明的变量只在let命令所在的代码块（被大括号```{}```包括的部分）内有效
+
+而```var```关键字的作用域是函数级的
+
+下面以一段循环代码为例
+```
+var a=[]
+for(var i=0;i<10;i++){
+a[i]=function(){console.log(i);}
+};
+a[5]()
+```
+理论上说，我们想要它打印的是5，但是由于是用了```var```关键字，实际上打印出来的是10。这时候只要把```for```语句里的```var i=0```改成```let i=0```即可达到我们想要的效果
+
+```var```关键字存在变量提升，可以先使用再声明，但```let```必须要先声明再使用，同时```let```也不允许重复声明 
+
+```const```声明一个只读的常量，一旦声明，常量的值就不能被改变。同时这也意味着一旦声明```const```就必须立刻进行赋值，不能留到之后进行改变。它和```let```相同，只在声明所在的块级作用域内有效，它所声明的常量也不能提升和重复声明
+* **
+* ## 对象解构赋值
+如果有这么一个变量
+```
+var user={
+name='fuhuo',
+psw='1234'
+}
+```
+正常的读取是```user.name```或者```user.psw```，如果采用解构赋值```const{name,psw}=user;```就可以直接使用```name```和```psw```了
+
+对象的属性没有次序，变量必须与属性同名才能取到值。
+* **
+* ## 字符串扩展
+ES6加强了对Unicode的支持，允许采用```\uxxxx```形式表示一个字符，其中```xxxx```表示字符的Unicode码点
+
+```for...of```遍历可以遍历字符串的每一个字符
+
+**模板字符串**是增强版的字符串，用反引号(`)表示，可以当作普通字符串使用，也可以定义多行字符串，或者在字符串中嵌入变量，比如说要动态创建一个a标签
+```
+var wz1="<a herf='"+URL+"'>"+text+"</a>"
+var wz2=`<a herf="${URL}">${text}</a>`
+```
+上面两种方法实现效果是一样的
+
+传统上JS只有```indexOf()```方法可以确定一个字符串是否包含在另一个字符串中，但ES6又提供了三种方法：```includes()```、```startsWith()```和```endsWith```
+
+```includes()```：返回布尔值，表示是否找到了参数字符串
+```startsWith()```：返回布尔值，表示参数字符串是否在原字符串的头部
+```endsWith()```：返回布尔值，表示参数字符串是否在原字符串的尾部
+
+三个方法都支持第二个参数，表示开始搜索的位置
+
+```repeat()```方法返回一个新字符串，表示将原字符串重复n次
+
+ES2017引入了字符串补全长度的功能，如果某个字符串不够指定长度，会在头部或尾部补全```padStart()```用来头部补全，```padEnd()```用来尾部补全。它们接受两个参数，分别是补全后的长度和用来补全的字符串
+
+ES2019新增了```trimStart()```和```trimEnd()```两种方法，这在前面字符串已经有过笔记
+
+```at()```方法接受一个整数作为参数，返回参数指定位置的字符，支持负索引
+* **
