2/8 JS笔记更新版

--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1380,3 +1380,116 @@ ES2019新增了```trimStart()```和```trimEnd()```两种方法，这在前面字
 
 ```at()```方法接受一个整数作为参数，返回参数指定位置的字符，支持负索引
 * **
+* ## 数组扩展
+扩展运算符是三个点（```...```），将一个数组转为用逗号分隔的参数序列
+
+```console.log(...[1,2,3,4]);```输出的就是```1 2 3 4```
+
+因为扩展运算符可以展开数组，所以就不再需要```apply```方法将数组转为函数的参数了。```Math.max.apply(null,[1,2,3,4]);```等同于```Math.max(...[1,2,3,4]);```
+
+扩展运算符提供了合并数组的新方法，之前合并数组用的是```arr1.concat(arr2)```，现在只需要```[...arr1,...arr2]```即可合并成一个新数组
+
+```Array.from()```方法用于将类数组转为真正的数组
+
+常见的类数组有：**arguments、元素集合、类似数组的对象**。类数组可以使用数组的读取方式和length属性，但是不能使用数组方法
+
+**arguments**是指函数当中的可选参数
+**元素集合**就比如```querySelectorAll()```方法获取的nodeList集合
+**类似数组的对象**就像
+```var user={
+"0":"1234",
+"1":1234,
+"2":"567",
+length:3,
+}
+```
+这种看起来像数组但是不是数组的对象
+<br>
+
+```Array.of()```方法用来将不是数组的一组值变为数组，注意要和```Array()```方法区分，后者的参数表面开辟数组空间的个数
+* **
+* 对象的扩展
+ES允许在大括号里面直接写入变量和参数作为对象的属性和方法，这样的书写方式更加简洁
+
+正常是这么写的：
+```
+var name='fuhuo'
+var user={
+name:name,
+age:20
+}
+```
+通过属性简介表示法，当属性名和属性值是一样的变量名称就可以省略，上面的```name:name,```就可以写为```name,```
+
+除了属性简写，方法也可以简写，还是上面的一段函数，我想加入一个方法，正常是这样的：
+```
+var name='fuhuo'
+var user={
+name:name,
+age:20,
+fangfa:function(){一串代码}
+}
+```
+但是简写后就可以省略掉```:function```，只用写```fangfa(){一串代码}```即可
+
+ES6允许字面量定义对象时，用表达式作为对象的属性名，即把表达式放在方括号里面
+```
+var user={
+username:'fuhuo',
+num:123
+}
+```
+修改后为：
+```
+var n="username"
+var user={
+[n]:'fuhuo',
+num:123
+}
+```
+<br>
+
+ES2018将扩展运算符引入了对象
+```
+var a={z:1,x:2};
+var b={...z,c:3};
+```
+* **
+* ## 函数扩展
+ES6允许使用箭头```=>```来定义函数
+```
+var 函数名=(参数)=>返回值
+```
+如果只有一个参数可以不用写括号，多个或没有参数都需要写括号
+
+如果箭头函数的代码块多于一条语句，就要使用大括号把它们括起来，并使用```return```语句返回。由于大括号被解释为代码块，如果箭头函数直接返回一个对象需要使用括号括起来，如：```var hs=(x,y)=>({x:10,y:20});```
+
+箭头函数的一个作用是简化回调函数（匿名函数）
+```
+var arr=[1,2,3,4];
+arr.map(item=>{console.log(item);
+})
+```
+
+对于普通函数来说，内部的```this```指向的是函数运行时所在的对象，但是这一点对箭头函数不成立，它没有自己的```this```对象，它内部的```this```就是定义时上层作用域的```this```
+* **
+* ## Set数据结构
+ES6提供了一个全新的数据结构Set，它类似于数组，但是成员的值是唯一的，没有重复值
+
+```Set```本身是一个构造函数，用来生成Set数据结构
+```var s=new Set();```
+<br>
+```Set```函数允许接受一个数组作为参数，把数组数据格式转为Set数据格式，可以以此进行数组数据去重。同时Set结构也可以使用扩展运算符```...```来读取数据，也就是说只需要```[...Set数组]```就可以把Set数据格式变为数组格式
+
+它还可以进行字符串去重：
+```console.log([...new Set("aabbcccddd")].join(""));```
+输出为abcd
+
+向Set加入值的时候不会发生类型转换，1和"1"是两个不同的值
+
+```size```属性可以返回```Set```实例的成员总数
+```add()```方法向```Set```实例中添加元素
+```delete()```方法删除```Set```实例中的某个值，返回一个布尔值表示是否删除
+```has()```方法判断```Set```实例中是否具有某个值，返回布尔值
+```clear()```方法清除```Set```实例的所有成员，没有返回值
+* **
