2/10 新增了导航栏，导航栏使用了媒体查询，页面宽度小于1250px时不显示

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -19,7 +19,7 @@
 
 <title>fuhuo</title>
 
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/style.css" media="screen">
 
 <link rel="stylesheet" href="./css/color.css">
 
@@ -49,6 +49,22 @@
 
 </div>
 
+<nav class="daohang">
+
+<h3>页面目录</h3>
+
+<ul class="dhnr">
+
+<li class="dhl"><div class="sekuai"></div><a href="#jianjie">简介</a></li>
+
+<li class="dhl"><div class="sekuai"></div><a href="#sjg">世界观</a></li>
+
+<li class="dhl"><div class="sekuai"></div><a href="#ml">角色目录</a></li>
+
+</ul>
+
+</nav>
+
 <div id="background">
 
 <div class="box1">
@@ -63,7 +79,7 @@
 
 <div class="jieshao">本demo旨在通过实操的方式学习前端相关知识，因为是边学边做，所以程序可能比较混乱，但有稍微整理过。</div>
 
-<div class="jianjie">
+<div class="jianjie" id="jianjie">
 
 <div style="border-left: 10px solid greenyellow ;">
 
@@ -83,17 +99,57 @@ width="400px" style="float: right;" title="点击进入283PRO"></a>
 
 シャイニーカラーズ）是由万代南梦宫NEXUS（前身为BXD）旗下的enza平台开发的一款模拟养成类抽卡社交网页游戏，为偶像大师系列作品之一，于2018年4月24日开始运营。</li>
 
-<p></p>
+<br>
 
 <li>《偶像大师闪耀色彩》背景设定在东京都的283事务所(283谐音“翅膀”)。玩家将培养和管理偶像，参与各种活动和演出。游戏特色在于其与现实时间同步的季节变化，以及丰富的剧情和角色成长系统。玩家可以在一个充满生活气息的环境中，体验偶像的成长和挑战。游戏的UI设计贴近现实，让玩家仿佛置身于偶像的日常生活之中。通过玩家的选择和互动，偶像们将经历各种故事线，展现不同的成长和变化。《偶像大师闪耀色彩》（アイドルマスター
 
 シャイニーカラーズ）是由万代南梦宫NEXUS（前身为BXD）旗下的enza平台开发的一款模拟养成类抽卡社交网页游戏，为偶像大师系列作品之一，于2018年4月24日开始运营。</li>
 
+<br>
+
+<li>与目前许多偶像题材游戏采用3D角色动画的形式对live进行呈现并作为游戏表现力的重点不同，偶像大师闪耀色彩以使用Spine制作的细腻的动态2D演出作为主要卖点，偏柔和的画风相较早期的偶像大师系列更加贴近当下的插画流行风格。</li>
+
 </ul>
 
 </div>
 
-<div class="box2">
+<div class="sjg" id="sjg">
+
+<div style="border-left: 10px solid yellow ;">
+
+<h1 style="color: aqua;">世界观</h1>
+
+</div>
+
+<h2>虽然本企划更贴近现实，但毕竟还是二次元————</h2>
+
+<div>
+
+<ul>
+
+<li>故事舞台为东京都，283事务所被设定成位于东京圣迹樱丘站周边。在剧情的背景以及角色卡面中频繁出现取材于实景的场景，也吸引了部分玩家前去圣地巡礼。</li>
+
+<br>
+
+<li>与偶像大师系列起点的765Pro相仿，283PRO位于一栋3层建筑的2楼和3楼（包括屋顶天台），原本是预定作为住宅出售的房屋，所以虽然是办公场所却有着狭长的玄关并配有厨房，制作人的办公桌（也就是育成界面的UI）正对着起居室中央的沙发与电视。2层窗户上贴着“283”的字样，楼下有宠物店、鞋店、书店和洗衣房。</li>
+
+<br>
+
+<li>游戏内剧情的时令与剧情上线时现实时间同步，季节感的变化在卡面的色彩光线与服装设计上多有体现，但角色的年龄设定仍然为不会增长的海螺小姐模式<span title="比如我们的冠军04" class="heimu">（但是小高沟槽的if卡可以看到一些未来的可能性）</span>，角色剧情中的成长经历与人际关系的变化则会累积继承下来。</li>
+
+<br>
+
+<li>在主要登场角色之外，也会有从甲方代表、现场STAFF、媒体业者、其他事务所的偶像到黑粉等大量无名配角出现参与到剧情中，为剧情增添不少社会职场味。并未将偶像的校园生活作为剧情的中心（剧情中承担玩家视点的制作人作为社会人士基本被隔离于校园之外，除noctchill成员彼此间和大崎姐妹之间外，在上中学的偶像们校服款式也各不相同，相互之间都不构成同学关系）。</li>
+
+</ul>
+
+</div>
+
+</div>
+
+  
+
+<div class="box2" id="ml">
 
 <div style="border-left: 10px solid rgb(0, 26, 255) ;">
 
@@ -541,7 +597,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
-<img src="ip1/Nck.png" alt="" class="iphoto">
+<img src="ip1/Nichika.png" alt="" class="iphoto">
 
 </div>
 
@@ -557,7 +613,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
-<img src="ip1/Mkt.png" alt="" class="iphoto">
+<img src="ip1/Mikoto.png" alt="" class="iphoto">
 
 </div>
 
@@ -569,7 +625,7 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 <div class="checkbox-container" id="luka" >
 
-<img src="sign/Luca_Sign.png" alt="" class="sign">
+<img src="sign/Luca_Sign.png" alt="" class="sign" >
 
 </div>
 
@@ -848,9 +904,7 @@ position: relative;
 
 top: 200px;
 
-margin-left: auto;
-
-margin-right: auto;
+margin-left:70px ;
 
 width: 1000px;
 
@@ -896,9 +950,7 @@ position: relative;
 
 overflow: hidden;
 
-margin-left: auto;
-
-margin-right: auto;
+margin-left: 20px;
 
 top: 30px;
 
@@ -908,7 +960,7 @@ top: 30px;
 
 #background .box1 #bz {
 
-float: left;
+position: absolute;
 
 width: 120px;
 
@@ -930,7 +982,7 @@ font-style: italic;
 
 text-align: center;
 
-margin: 0px;
+margin: 15px auto 0 auto;
 
 }
 
@@ -948,9 +1000,7 @@ font-family: "KaiTi";
 
 text-align: center;
 
-margin-top: 15px;
-
-margin-bottom: 0px;
+margin: 15px auto 0 auto;
 
 }
 
@@ -967,6 +1017,8 @@ margin-left: auto;
 margin-right: auto;
 
 margin-top: 50px;
+
+padding-bottom: 20px;
 
 }
 
@@ -1207,6 +1259,106 @@ user-select: none;
 pointer-events: none;
 
 }
+
+.sjg{
+
+background: rgba(255, 255, 255, 0.5);
+
+width: 800px;
+
+margin: 30px auto 30px auto;
+
+padding-bottom: 20px;
+
+}
+
+.heimu{
+
+background-color: black;
+
+color: black;
+
+}
+
+.heimu:hover{
+
+transition: color 0.13s linear;
+
+color: white;
+
+}
+
+.daohang {
+
+background: rgba(255, 255, 255, 0.8);
+
+position: fixed;
+
+padding: 10px;
+
+padding-top: 0;
+
+top: 208px;
+
+right: 40px;
+
+user-select: none;
+
+width: 100px;
+
+}
+
+.dhl{
+
+display: flex;
+
+padding-left: 0;
+
+}
+
+.dhnr{
+
+padding-left: 0px;
+
+}
+
+.daohang a{
+
+text-decoration: none;
+
+color: black;
+
+margin: 5px;
+
+}
+
+@media (max-width: 1250px) {
+
+.daohang{
+
+display: none;
+
+}
+
+}
+
+.highlight{
+
+background-color: #8adfff;
+
+height: 31px;
+
+width: 100px;
+
+position: absolute;
+
+z-index: -1;
+
+transition: all 0.5s ease-in-out;
+
+border-radius: 8px;
+
+}
 ```
 <br>
 
@@ -1411,7 +1563,7 @@ var bg = document.querySelector('.biaoge')
 
 bg.addEventListener("mouseover",function(event){
 
-if(event.target.className ==="checkbox-container"){
+if(event.target.className.includes("checkbox-container")){
 
 var mb=event.target
 
@@ -1425,11 +1577,9 @@ mb.classList.add('xz');
 
 var sign=0
 
-console.log(mb)
-
 var qm=setInterval(function(){
 
-if(sign<1.05&&mb.className==='checkbox-container xz'){
+if(sign<1.05&&mb.className.includes('xz')){
 
 sn.style.opacity=sign
 
@@ -1455,7 +1605,7 @@ document.querySelectorAll('.sign').forEach(function(a){a.style.opacity=0;})
 
 bg.addEventListener("click",function(event){
 
-if(event.target.className ==="checkbox-container xz"){
+if(event.target.className.includes("checkbox-container")){
 
 var mb=event.target
 
@@ -1518,6 +1668,105 @@ qkbtn.addEventListener('mouseup',function(){
 document.querySelector('.qk').style.color="white";
 
 })
+
+  
+
+document.querySelectorAll('a[href^="#"]').forEach(function(a){
+
+a.addEventListener("click",function(e){
+
+e.preventDefault();
+
+document.querySelector(a.getAttribute('href')).scrollIntoView({
+
+behavior: 'smooth'
+
+});
+
+})
+
+})
+
+  
+  
+
+function ymgdjl(func,limit){
+
+let ymgdjl=true;
+
+return function(){
+
+if(!ymgdjl){
+
+return false;
+
+}
+
+ymgdjl=false;
+
+setTimeout(function(){
+
+func();
+
+ymgdjl=true;
+
+},limit)
+
+}
+
+}
+
+function juli(){
+
+var scrollTop=document.documentElement.scrollTop;
+
+var box=document.querySelector('.daohang').querySelectorAll('.dhl');
+
+if(scrollTop<800){
+
+dhlbs(box[0].childNodes[1]);
+
+} else if(scrollTop>=800&&scrollTop<1400){
+
+dhlbs(box[1].childNodes[1]);
+
+}else if(scrollTop>=1400){
+
+dhlbs(box[2].childNodes[1]);
+
+}
+
+else{box.forEach(function(b){
+
+b.style.backgroundColor='';
+
+b.childNodes.forEach(function(c){c.style.color='black'; });
+
+});}
+
+}
+
+window.onscroll=ymgdjl(juli,200);
+
+  
+
+function dhlbs(a){
+
+document.querySelectorAll('.highlight').forEach(function(b){
+
+b.classList.remove('highlight')
+
+b.parentNode.childNodes[1].style.color='black';
+
+});
+
+var xz=a.parentNode.childNodes[0];
+
+xz.classList.add('highlight');
+
+a.style.color='#FAFAD2';
+
+}
 ```
 * **
 ## 图片部分
