2/11 代码部分更新

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -51,15 +51,17 @@
 
 <nav class="daohang">
 
-<h3>页面目录</h3>
+<img src="scSign.png" alt="" class="scSign">
 
 <ul class="dhnr">
 
-<li class="dhl"><div class="sekuai"></div><a href="#jianjie">简介</a></li>
+<li class="dhl"><a href="#jianjie">简介</a></li>
 
-<li class="dhl"><div class="sekuai"></div><a href="#sjg">世界观</a></li>
+<li class="dhl"><a href="#sjg">世界观</a></li>
 
-<li class="dhl"><div class="sekuai"></div><a href="#ml">角色目录</a></li>
+<li class="dhl"><a href="#shinyani">动画相关</a></li>
+
+<li class="dhl"><a href="#ml">角色目录</a></li>
 
 </ul>
 
@@ -113,7 +115,7 @@ width="400px" style="float: right;" title="点击进入283PRO"></a>
 
 </div>
 
-<div class="sjg" id="sjg">
+<div class="jieshaowenben" id="sjg">
 
 <div style="border-left: 10px solid yellow ;">
 
@@ -147,7 +149,81 @@ width="400px" style="float: right;" title="点击进入283PRO"></a>
 
 </div>
 
+<div class="jieshaowenben" id="shinyani">
+
+<div style="border-left: 10px solid purple;">
+
+<h1 style="color: aqua;">动画相关</h1>
+
+</div>
+
+<h2>能看完的到我这来领神人奖励</h2>
+
+<img src="scdonhua.png" alt="" style="height: 350px;float: right;user-select: none;">
+
+<ul>
+
+<li>《偶像大师 闪耀色彩》动画第1季度于2023年3月19日宣布TV动画制作决定，于2024年春播出。
+
+2023年10月27日起在全国75馆剧场进行先行上映，共3章，每章上映3周。
+
+每章上映时间分别为2023年10月27日、2023年11月24日、2024年1月5日。
+
+第1季度已于2024年4月5日至6月21日首播。 第2季度于2024年3月宣布TV动画制作决定，
+
+于2024年秋播出。2024年7月5日起在全国进行先行上映，共3章，每章上映3周。每章上映时间分别为2024年7月5日、
+
+2024年8月23日、2024年9月20日。第2季度已于2024年10月4日至12月20日首播。
+
+</li>
+
+</ul>
+
+<hr>
+
+<div class="fenge"><h3>以上就是官方文本，下面是私人评价</h3></div>
+
+<hr>
+
+<ul>
+
+<li>
+
+继传奇之作偶像大师本家动画之后，偶像大师全系列也一部部迎来自己的动画化，
+
+偶像大师系列动画一直都是外行看热闹内行看门道的类型。闪耀色彩作为一个年轻的企划迎来自己的动画化本是一件激动人心的事情，
+
+因为其游戏剧情深刻，人物形象刻画鲜明并且吸引人，想必闪耀色彩动画一定会成为偶像大师动画的又一个巅峰吧......
+
+<br>
+
+<br>
+
+我看未必，实则不然，恰恰相反，其剧情真的做到了一碗水端平，让人看完之后不知道每一集在讲什么。剧情逻辑毫无章法，人设毫无吸引力，甚至ED动画做的也没有前辈好。
+
+虽然动画也有少数的高光时刻但是瑜不掩瑕，在不吸引路人观众的同时把粉丝也搞得一团懵。
+
+简单来说就是：<span class="heimu" style="font-size: 20px; font-weight: 800;">看的我想死</span>
+
+<br>
+
+<br>
+
+安利这个企划时可以用细腻精良的剧情、烟火气足又不乏时尚感的服装、个性十足的小偶像、特色鲜明的歌曲，甚至线下live<span class="heimu">（女声优）</span>好看的理由推荐别人入坑，
+
+<br>
+
+<br>
+
+<span style="font-size: larger; font-weight: 800;">至于动画，什么动画？我们没有动画</span>
+
+</li>
+
+</ul>
+
   
+
+</div>
 
 <div class="box2" id="ml">
 
@@ -1018,7 +1094,7 @@ margin-right: auto;
 
 margin-top: 50px;
 
-padding-bottom: 20px;
+padding: 0 20px 20px 0;
 
 }
 
@@ -1260,18 +1336,6 @@ pointer-events: none;
 
 }
 
-.sjg{
-
-background: rgba(255, 255, 255, 0.5);
-
-width: 800px;
-
-margin: 30px auto 30px auto;
-
-padding-bottom: 20px;
-
-}
-
 .heimu{
 
 background-color: black;
@@ -1300,11 +1364,11 @@ padding-top: 0;
 
 top: 208px;
 
-right: 40px;
+right: 30px;
 
 user-select: none;
 
-width: 100px;
+width: 120px;
 
 }
 
@@ -1314,11 +1378,23 @@ display: flex;
 
 padding-left: 0;
 
+height: 31px;
+
+width: 100px;
+
 }
 
 .dhnr{
 
 padding-left: 0px;
+
+overflow: auto;
+
+max-height: 92px;
+
+scroll-behavior: smooth;
+
+width: 120px;
 
 }
 
@@ -1346,17 +1422,73 @@ display: none;
 
 background-color: #8adfff;
 
-height: 31px;
-
-width: 100px;
-
-position: absolute;
-
-z-index: -1;
-
 transition: all 0.5s ease-in-out;
 
 border-radius: 8px;
+
+}
+
+.jieshaowenben{
+
+background: rgba(255, 255, 255, 0.5);
+
+width: 800px;
+
+margin: 30px auto 30px auto;
+
+padding: 0px 20px 20px 0;
+
+position: relative;
+
+}
+
+.fenge{
+
+display: flex;
+
+align-items: center;
+
+justify-content: center;
+
+}
+
+.scSign{
+
+height: 100px;
+
+margin:10px auto 0 auto;
+
+display: block;
+
+}
+
+  
+
+.dhnr::-webkit-scrollbar {
+
+width: 8px;
+
+}
+
+.dhnr::-webkit-scrollbar-track {
+
+background: #f1f1f1;
+
+border-radius: 6px;
+
+}
+
+.dhnr::-webkit-scrollbar-thumb {
+
+background: #888;
+
+border-radius: 5px;
+
+}
+
+.dhnr::-webkit-scrollbar-thumb:hover {
+
+background: #555;
 
 }
 ```
@@ -1579,7 +1711,7 @@ var sign=0
 
 var qm=setInterval(function(){
 
-if(sign<1.05&&mb.className.includes('xz')){
+if(sign<1.05&&mb.className==='checkbox-container xz'){
 
 sn.style.opacity=sign
 
@@ -1589,7 +1721,7 @@ sign+=0.05;
 
 clearInterval(qm);
 
-}},40)
+}},25)
 
 }else{
 
@@ -1718,37 +1850,45 @@ ymgdjl=true;
 
 function juli(){
 
-var scrollTop=document.documentElement.scrollTop;
+var jl=document.documentElement.scrollTop;
 
 var box=document.querySelector('.daohang').querySelectorAll('.dhl');
 
-if(scrollTop<800){
+var dhnr=document.querySelector('.dhnr')
 
-dhlbs(box[0].childNodes[1]);
+if(jl<800){
 
-} else if(scrollTop>=800&&scrollTop<1400){
+dhlbs(box[0]);
 
-dhlbs(box[1].childNodes[1]);
+dhnr.scrollTop=0;
 
-}else if(scrollTop>=1400){
+} else if(jl>=800&&jl<1360){
 
-dhlbs(box[2].childNodes[1]);
+dhlbs(box[1]);
+
+}else if(jl>=1360&&jl<2150){
+
+dhlbs(box[2]);
+
+}else if(jl>=2150){
+
+dhlbs(box[3]);
+
+dhnr.scrollTop=93;
 
 }
 
-else{box.forEach(function(b){
+}
 
-b.style.backgroundColor='';
+function setfirst(){
 
-b.childNodes.forEach(function(c){c.style.color='black'; });
-
-});}
+dhlbs(document.querySelector('.daohang').querySelectorAll('.dhl')[0]);
 
 }
 
-window.onscroll=ymgdjl(juli,200);
+window.onscroll=ymgdjl(juli,180);
 
-  
+setfirst();
 
 function dhlbs(a){
 
@@ -1756,15 +1896,15 @@ document.querySelectorAll('.highlight').forEach(function(b){
 
 b.classList.remove('highlight')
 
-b.parentNode.childNodes[1].style.color='black';
+b.childNodes[0].style.color='black';
 
 });
 
-var xz=a.parentNode.childNodes[0];
+var xz=a.childNodes[0];
 
-xz.classList.add('highlight');
+a.classList.add('highlight');
 
-a.style.color='#FAFAD2';
+xz.style.color='#FAFAD2';
 
 }
 ```
@@ -1782,6 +1922,11 @@ a.style.color='#FAFAD2';
 283pro.png
 ![输入图片说明](https://www.project-imas.wiki/images/7/71/283.jpg)
 <br>
+scdonghua.png
+![](https://www.project-imas.wiki/images/7/7e/ShinyColorsAnimeKV.jpg)
+<br>
+scSign.png
+![1](https://idolmaster-official.jp/live_event/master_expo/images/common/logo_shiny.png)
 * **
 ### zh文件夹
 xing.png
