--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1693,6 +1693,109 @@ async function timeout() {
 
 （还有一个小细节async/await打包后的代码其实会比 promise 复杂很多， 当然这个是一个忽略不计得问题）
 * **
+* ### Response对象
+fetch请求成功了之后，得到的是一个Response对象，它是对应服务器的HTTP响应
+
+常见属性：
+|属性|描述  |
+|--|--|
+| ```res.ok``` | 返回布尔类型表示请求是否成功 |
+| ```res.status``` |返回状态码  |
+| ```res.statusText``` | 返回状态的文本信息 |
+| ```res.url``` |返回请求的url地址  |
+<br>
+
+常见方法：
+|方法|描述  |
+|--|--|
+| ```res.json()``` | 得到JSON对象 |
+| ```res.text()``` | 得到文本字符串 |
+| ```res.blob()``` | 得到二进制Blob对象 |
+| ```res.formData()``` | 得到FromData表单对象 |
+| ```res.arrayBuffer()``` | 得到二进制ArrayBuffer对象 |
+<br>
+
+* **
+* ### fetch配置参数
+fetch的第一个参数是url，此外还可以接收第二个参数作为配置对象，可以自定义发出的HTTP请求，语法为：```fetch(url,options)```。以post为例
+
+
+```
+fetch(url,{
+    method:'post',
+    headers:{
+    'content-Type':"数据格式"
+    },
+    body:'post请求体数据'
+})
+```
+fetch发送post请求有多种格式，JSON格式较为常用
+```
+async function add{
+let obj={
+    name:'fuhuo',
+    num:1234
+    }
+    let res=await fetch(url,{
+    method:'post',
+    headers{
+    'content-Type':'application/json'
+    },
+    body:JSON.stringify(obj)
+    })
+    let json=await res.json()
+    console.log(json);
+}
+```
+* **
+* ### fetch函数封装
+原生fetch虽然已经支持promise了，相比XMLHttpRequest方式好用很多，但是参数还是要自己处理比较麻烦：
+
+1. get、delete的请求参数需要在地址栏进行拼接
+2. put patch post的请求参数要转json设置请求类
+
+目标效果：
+```
+http({
+    method:'xxx',
+    url:'xxx',
+    params:{...}  //查询参数
+})   //发送get请求、delete请求
+http({
+    method:'xxx',
+    url:'xxx',
+    data{...}
+})    //发送post、put、patch请求
+```
+ 那么要达成这个效果就需要封装这个http函数：
+ ```
+ async function http(obj){ 
+     //先将形参obj解构赋值
+     let {method,url,params,data}=obj
+     //params需要处理，转化成能拼接在url后面的格式
+     //data需要处理，如果有需要写完整的代码headers
+     let res
+     if(params){
+     let str=new URLSearchParams(params).toString()  //简单的固定写法，可以直接用
+     url=url+'?'+str;
+     }
+     if(data){
+     res=await fetch(url,{
+        method:method,
+        headers{
+        'content-Type':'application/json'
+        },
+        body:JSON.stringify(data)
+        })
+    }else{
+    res=await fetch(url)
+    }
+    return res.json();
+ }
+ ```
+* **
+
+
 
 
 
